@@ -75,9 +75,13 @@ issues:
     - "Magic number: 15, in"
     - "Magic number: 16, in"
     - "Magic number: 20, in"
+    - "Magic number: 22, in"
+    - "Magic number: 23, in"
     - "Magic number: 24, in"
+    - "Magic number: 31, in"
     - "Magic number: 32, in"
     - "Magic number: 50, in"
+    - "Magic number: 59, in"
     - "Magic number: 60, in"
     - "Magic number: 64, in"
     - "Magic number: 100, in"
