@@ -8,7 +8,7 @@ import (
 )
 
 const (
-	WMIDateFormat = "20060102150405.000000-070"
+	WMIDateFormat = "20060102150405.000000"
 )
 
 type EventLog struct {
@@ -47,6 +47,24 @@ type Event struct {
 
 func GetLog(file string, newerThan time.Time) ([]Event, error) {
 	messages := []Event{}
+
+	// Format the time without the timezone offset
+	formattedTime := newerThan.Format(WMIDateFormat)
+
+	// Get the timezone offset in seconds and convert it to minutes
+	_, offsetSeconds := newerThan.Zone()
+	offsetMinutes := offsetSeconds / 60
+
+	// Determine the sign of the offset
+	offsetSign := "+"
+	if offsetMinutes < 0 {
+		offsetSign = "-"
+		offsetMinutes = -offsetMinutes // Make offsetMinutes positive for formatting
+	}
+
+	// append the offset with three digits and leading zeros
+	wmiFormattedTime := fmt.Sprintf("%s%s%03d", formattedTime, offsetSign, offsetMinutes)
+
 	query := fmt.Sprintf(`
 	SELECT
 		ComputerName,
@@ -65,7 +83,7 @@ func GetLog(file string, newerThan time.Time) ([]Event, error) {
 	WHERE
 		Logfile='%s'
 		AND TimeGenerated >= '%s'
-	`, file, newerThan.Format(WMIDateFormat))
+	`, file, wmiFormattedTime)
 	err := wmi.QueryDefaultRetry(query, &messages)
 	if err != nil {
 		return nil, fmt.Errorf("wmi query failed: %s", err.Error())
