@@ -3,6 +3,7 @@ This file documents the revision history for the SNClient+ agent.
 next:
          - update windows exporter to 0.29.0
          - wmi: always set en_US language in query (#156)
+         - check_eventlog: fix time offset parsing (#157)
 
 0.27     Mon Sep  2 19:31:14 CEST 2024
          - do not use empty-state if warn/crit conditions contain check on 'count'
